small fixes, JS loading of last cluster apps versions
