# ApiOther/Mihaylov.Api.Other.Client/swagger.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.1",
+  "openapi": "3.0.4",
   "info": {
     "title": "Other API",
     "description": "Miscellaneous Endpoints API",
@@ -451,6 +451,13 @@
               "type": "integer",
               "format": "int32"
             }
+          },
+          {
+            "name": "reload",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -482,47 +489,6 @@
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "/api/Cluster/ReloadLastVersion": {
-      "delete": {
-        "tags": [
-          "Cluster"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "additionalProperties": {
-                    "type": "array",
-                    "items": {
-                      "type": "string"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "200": {
-            "description": "OK"
           }
         }
       }
@@ -2250,7 +2216,19 @@
           },
           "releaseDate": {
             "type": "string",
-            "format": "date-time"
+            "format": "date-time",
+            "nullable": true
+          },
+          "isSuccessful": {
+            "type": "boolean"
+          },
+          "rawVersion": {
+            "type": "string",
+            "nullable": true
+          },
+          "rawReleaseDate": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
