# ApiOther/Mihaylov.Api.Other.Contracts/Cluster/Models/Version/LastVersionModel.cs
@@ -8,6 +8,12 @@ namespace Mihaylov.Api.Other.Contracts.Cluster.Models.Version
 
         public string Version { get; set; }
 
-        public DateTime ReleaseDate { get; set; }
+        public DateTime? ReleaseDate { get; set; }
+
+        public bool IsSuccessful { get; set; }
+
+        public string RawVersion { get; set; }
+
+        public string RawReleaseDate { get; set; }
     }
 }
